@@ -96,6 +96,7 @@ WHAT IS NEW?
     * .gifs recorded while running in 24-bit color depth are smaller, smoother
       (dithered) and flicker less [Ralph]
     * Slice Editor Metadata section shows Screen X/Y and Draw timings [Ralph]
+    * Attack extra data, for scripts [Holly]
 
    * New Plotscripting Features
     * "dir X", "dir Y" [Ralph]
@@ -120,6 +121,7 @@ WHAT IS NEW?
         the extra array: "get extra(sl, -1)" is the last value, -2 is the second
         last, etc. Works with all extra data commands.
       [Ralph]
+    * "get attack extra" [Holly]
     * "lookup next slice", "next slice in tree" [Ralph]
     * "window is focused" [Ralph]
     * "show value" can now show multiple values. Added "show values" as an alias.
